--- a/notes.org
+++ b/notes.org
@@ -579,6 +579,8 @@ rectangle (snap to area shortcuts).
 - [[https://www.youtube.com/watch?v=fqMOX6JJhGo][YouTube: Docker Tutorial for Beginners - A Full DevOps Course on How to Run
   Applications in Containers]].
 - [[https://nodramadevops.com/containers/][No Drama DevOps: Containers]].
+- ~--progress=plain --no-cache~ - Plaintext output + don't condensed cached
+  layer output.
 ** Best Practices:
 *** No Root Access:
 A container should never be run with root-level access. A role-based access
