--- a/notes.org
+++ b/notes.org
@@ -821,6 +821,28 @@ This will work for other elisp built-in's. eg.
   basic ~IJulia~ + ~jupyter~ install steps (no use-package).
 * FrontEnd:
 - https://builtwith.com/ - Get Tech Stack that a site is built with.
+** GraphQL:
+*** Making requests with curl:
+See: https://www.maxivanov.io/make-graphql-requests-with-curl/
+
+- Mutation query:
+  #+BEGIN_EXAMPLE shell
+    curl 'https://graphql-api-url' \
+      -X POST \
+      -H 'content-type: application/json' \
+      --data '{
+        "query":"mutation { createUser(name: \"John Doe\") }"
+      }'
+  #+END_EXAMPLE
+- Mutation query with defined response data and specific endpoint:
+  #+BEGIN_EXAMPLE shell
+    curl 'https://<random-server>' \
+      -X POST \
+      -H 'content-type: application/json' \
+      --data '{
+        "query":"mutation {retrieveApplication(identifier: \"user@email.com\", pin_code: \"1234\") {id url}}"
+      }'
+  #+END_EXAMPLE
 ** React:
 - View cookies in browser: ~Developer Tools > Storage Tab > Cookies~.
 - ~redux~ is the store of all BE DB state in the FE.
