--- a/notes.org
+++ b/notes.org
@@ -142,6 +142,14 @@ namespace. ie. no Code changes between local/remote packages.
   mocking library.
 - https://phpstan.org/user-guide/getting-started - static linter.
 - https://www.slimframework.com/ - Web Apps/API framework.
+** Telemetry:
+*** [[https://opentelemetry.io/docs/][OpenTelemetry]]:
+Open metrics/logging/tracing telemetry.
+
+- [[https://opentelemetry.io/docs/instrumentation/js/getting-started/nodejs/][OpenTelemetry Docs: nodejs]].
+- [[https://opentelemetry.io/docs/instrumentation/go/getting-started/][OpenTelemetry Docs: go]].
+- [[https://www.apollographql.com/docs/federation/opentelemetry/][Apollo GraphQL: OpenTelemetry]].
+- [[https://nextjs.org/docs/app/building-your-application/optimizing/open-telemetry][NextJS: OpenTelemetry]].
 * Bash:
 - ~ps -aef --forest~ for tree view of processes.
 ** Curl:
