--- a/notes.org
+++ b/notes.org
@@ -157,19 +157,21 @@ Open metrics/logging/tracing telemetry.
   from or to a server. Supports most protocols, including HTTP, FTP, and
   POP3. More information: https://curl.se.
 - [[http://cht.sh/curl][cheat.sh/curl]].
+** De/Compress Files:
+- Decompress =.xz=: ~unxz <file.ext.xz>~.
+** PDF:
+*** How to decrypt a PDF for printing?:
+~docker run --user $UID:$GROUPS --rm -v $(pwd):/work mgodlewski/qpdf --decrypt <input>.pdf <output>.pdf~
+*** How to resize a PDF + scale content?:
+~docker run --rm -v .:/app -w /app minidocks/ghostscript -o <output>_a5.pdf -sPAPERSIZE=a5 -dFIXEDMEDIA -dPDFFitPage -sDEVICE=pdfwrite <input>.pdf~
+** RDP:
+- =xfreerdp= example connection string: ~xfreerdp /w:1920 /h:1080 /u:<username>
+  /v:<hostname>~
 ** [[https://surf.suckless.org/][surf | suckless.org]] software that sucks less
 surf is a simple web browser based on WebKit2/GTK+. It is able to display
 websites and follow links. It supports the XEmbed protocol which makes it
 possible to embed it in another application. Furthermore, one can point surf to
 another URI by setting its XProperties.
-** PDF:
-*** How to decrypt a PDF for printing?:
-~docker run --user $UID:$GROUPS --rm -v $(pwd):/work mgodlewski/qpdf --decrypt <input>.pdf <output>.pdf~
-** How to resize a PDF + scale content?:
-~docker run --rm -v .:/app -w /app minidocks/ghostscript -o <output>_a5.pdf -sPAPERSIZE=a5 -dFIXEDMEDIA -dPDFFitPage -sDEVICE=pdfwrite <input>.pdf~
-** RDP:
-- =xfreerdp= example connection string: ~xfreerdp /w:1920 /h:1080 /u:<username>
-  /v:<hostname>~
 * BuildTools:
 - [[https://www.gnu.org/software/make/][GNU Make: Makefiles with build targets]].
 - [[https://taskfile.dev/#/][Task: task runner / build tool that aims to be simpler than GNU Make]].
