--- a/notes.org
+++ b/notes.org
@@ -425,6 +425,41 @@ Need to get to the ~Secure Erase Options~ to do full disk erasing.
 - Pick: ~Mac OS Extended (Journaled, Encrypted)~ and set an easy password.
 - After first erase, change to: ~Mac OS Extended (Journaled)~ and then select
   a: ~Secure Erase Options~, to do full disk wipe.
+** LAGG (LACP):
+*** [[https://forum.proxmox.com/threads/setting-up-lag-inside-proxmox.103235/][proxmox LAGG]]:
+#+BEGIN_EXAMPLE
+  auto lo
+  iface lo inet loopback
+
+  auto eno1
+  iface eno1 inet manual
+
+  auto eno2
+  iface eno2 inet manual
+
+  auto eno3
+  iface eno3 inet manual
+
+  auto eno4
+  iface eno4 inet manual
+
+  auto bond1
+  iface bond1 inet manual
+          bond-slaves eno1 eno2 eno3 eno4
+          bond-miimon 100
+          bond-mode 802.3ad
+          bond-xmit-hash-policy layer3+4
+
+  auto vmbr1
+  iface vmbr1 inet static
+          address 192.168.1.100/24
+          gateway 192.168.1.254
+          bridge-ports bond1
+          bridge-stp off
+          bridge-fd 0
+          bridge-vlan-aware yes
+          bridge-vids 2-4094
+#+END_EXAMPLE
 ** Mac config:
 *** iterm2
 - ~Preferences > Profiles > Keys > General > <Left/Right> Option Key = Esc+~ -
